--- a/package.json
+++ b/package.json
@@ -2,22 +2,31 @@
   "name": "crypto-currencies-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://javoto17.github.io/crypto-currencies-app/",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bulma": "^0.7.2",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.0.1",
+    "terser": "^3.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,6 +38,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "gh-pages": "^2.0.1"
+  },
+  "resolutions": {
+    "terser": "3.14.1"
   }
 }
