--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
         "jest": true,
         "node": true
     },
+    "parser": "babel-eslint",
     "extends": ["eslint:recommended", "plugin:react/recommended"],
     "parserOptions": {
         "ecmaFeatures": {
