--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
     "cryptocurrency-icons": "^0.10.0",
+    "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.2",
+    "react-color-extractor": "^1.1.2",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-logger": "^3.0.6",
