--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redux-devtools-extension": "^2.13.7",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.1",
-    "terser": "^3.14.1"
+    "terser": "^3.14.1",
+    "victory": "^31.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
