--- a/package.json
+++ b/package.json
@@ -6,23 +6,36 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
-    "cryptocurrency-icons": "^0.10.0",
+    "chart.js": "^1.1.1",
+    "cryptocurrency-icons": "^0.10.1",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.2",
+    "react": "^16.8.6",
+    "react-chartjs-2": "^2.7.6",
     "react-color-extractor": "^1.1.2",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.5",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.1",
-    "terser": "^3.14.1",
-    "victory": "^31.2.0"
+    "redux-saga": "^1.0.2",
+    "terser": "^3.17.0",
+    "victory": "^31.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,8 +55,11 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "prettier": "^1.17.0"
   },
   "resolutions": {
     "terser": "3.14.1"
