--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "now-dev": "react-scripts start",
   },
   "eslintConfig": {
     "extends": "react-app"
